# nn-exercise

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  config.py  exercise1.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py  instructions.md  llm_backend.py  pyproject.toml  search_tools.py  test_exercise4.py  test_exercise5.py  user_processor.py
